--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "date-fns": "^4.1.0",
     "next": "15.4.6",
     "react": "19.1.0",
