--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.400.0",
+    "moment": "^2.30.1",
     "next": "14.2.5",
     "react": "18.3.1",
+    "react-big-calendar": "^1.19.4",
     "react-day-picker": "^8.10.0",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.47.0",
@@ -36,8 +40,10 @@
     "zod": "^4.0.17"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "18.3.3",
+    "@types/react-big-calendar": "^1.16.2",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "^10",
     "eslint": "^8",
