--- a/package.json
+++ b/package.json
@@ -58,10 +58,11 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20",
-    "@types/react": "18.3.3",
+    "@types/node": "^20.19.11",
+    "@types/react": "^18.3.3",
     "@types/react-big-calendar": "^1.16.2",
-    "@types/react-dom": "18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "@types/recharts": "^1.8.29",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
