--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio",
+    "postinstall": "prisma generate"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -19,6 +26,7 @@
     "@fullcalendar/react": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
     "@hookform/resolvers": "^5.2.1",
+    "@prisma/client": "6.16.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -39,10 +47,14 @@
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "cmdk": "^1.1.1",
     "date-fns": "^2.30.0",
+    "jose": "^6.1.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.400.0",
     "moment": "^2.30.1",
@@ -60,6 +72,7 @@
     "zod": "^4.1.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.19.13",
     "@types/react": "^18.3.3",
@@ -70,6 +83,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "prisma": "6.16.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
